# LexiPi

./: .gitignore  CMakeLists.txt  Final_certified_optimization.md  GADDAG_Pseudo.md  IMPLEMENTATION_SUMMARY.md  LEXI_PI_BotTest.rar  LEXI_PI_V4_HyperSpeedTest(stable).rar  MoveGen_Pseudo.md  Performance_Improvements_500.md  Phase1_documentation.md  Refactoring_Guide.md  board.cpp  board.h  chatlog01.md  finalizedOptimum.md  fix_plan.md  gitignore.txt  main.cpp  move.cpp  move.h  optimization_log.md  rack.cpp  rack.h  run_test.bat  tiles.cpp  tiles.h
data/: weights.txt
include/: ai_player.h  assertions.h  board.h  board_state.h  choices.h  controller.h  dawg.h  dict.h  endgame_solver.h  evaluation_model.h  evaluator.h  fast_constraints.h  game_engine.h  heuristics.h  human_player.h  logger.h  move.h  move_key.h  move_validator.h  player_controller.h  rack.h  random.h  ruleset.h  test_player.h  tile_tracker.h  tiles.h
include/engine/: board.h  dictionary.h  game_director.h  mechanics.h  rack.h  referee.h  state.h  tiles.h  types.h
include/interface/: console_observer.h  renderer.h
include/kernel/: fast_constraints.h  greedy_engine.h  heuristics.h  move_generator.h
include/modes/AiAi/: aiai.h
include/modes/Home/: home.h
include/modes/PvE/: pve.h
include/modes/PvP/: pvp.h
include/modes/Test/: test_mode.h
include/modes/Training/: training_mode.h
include/spectre/: engine_config.h  general.h  judge.h  leave_evaluator.h  logger.h  move_generator.h  opponent_model.h  search_strategy.h  spectre_engine.h  spectre_types.h  spy.h  superleave_table.h  treasurer.h  vanguard.h
modes/Home/: home.cpp  home.h
modes/PvP/: pvp.cpp
src/: ai_player.cpp  board.cpp  board_state.cpp  choices.cpp  controller.cpp  dawg.cpp  dict.cpp  dictionary.cpp  endgame_solver.cpp  evaluation_model.cpp  evaluator.cpp  fast_constraints.cpp  game_engine.cpp  human_player.cpp  logger.cpp  main.cpp  move.cpp  move_key.cpp  move_validator.cpp  rack.cpp  random.cpp  ruleset.cpp  test_player.cpp  tiles.cpp
src/engine/: board.cpp  dictionary.cpp  game_director.cpp  mechanics.cpp  rack.cpp  referee.cpp  tiles.cpp
src/interface/: renderer.cpp
src/kernel/: greedy_engine.cpp  move_generator.cpp
src/modes/AiAi/: aiai.cpp
src/modes/Home/: home.cpp
src/modes/PvE/: pve.cpp
src/modes/PvP/: pvp.cpp
src/modes/Test/: test_mode.cpp
src/modes/Training/: training_mode.cpp
src/spectre/: council.cpp  engine_config.cpp  general.cpp  judge.cpp  leave_evaluator.cpp  move_generator.cpp  opponent_model.cpp  search_strategy.cpp  spectre_engine.cpp  spy.cpp  treasurer.cpp  vanguard.cpp
